--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "@coinbase/wallet-sdk": "^3.7.1",
     "siwe": "^2.1.4",
-    "ethers": "^6.8.1"
+    "ethers": "^6.8.1",
+    "wagmi": "^2.5.7",
+    "viem": "^2.7.15",
+    "@tanstack/react-query": "^5.28.6",
+    "@rainbow-me/rainbowkit": "^2.0.5",
+    "clsx": "^2.1.0",
+    "tailwindcss": "^3.4.1",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
