--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.7.1",
     "@google/genai": "^1.13.0",
-    "react-router-dom": "6.22.3",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@rainbow-me/rainbowkit": "^2.0.5",
+    "@tanstack/react-query": "^5.28.6",
+    "@uppy/core": "^4.5.2",
+    "@uppy/dashboard": "^4.4.3",
+    "@uppy/drag-drop": "^4.2.2",
+    "@uppy/progress-bar": "^4.3.2",
+    "@uppy/tus": "^4.3.2",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "clsx": "^2.1.0",
+    "ethers": "^6.8.1",
+    "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "path": "^0.12.7",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "@coinbase/wallet-sdk": "^3.7.1",
+    "react-router-dom": "6.22.3",
     "siwe": "^2.1.4",
-    "ethers": "^6.8.1",
-    "wagmi": "^2.5.7",
-    "viem": "^2.7.15",
-    "@tanstack/react-query": "^5.28.6",
-    "@rainbow-me/rainbowkit": "^2.0.5",
-    "clsx": "^2.1.0",
     "tailwindcss": "^3.4.1",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1"
+    "viem": "^2.7.15",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
