feat:implemeting ai task till 55

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,20 +1,9 @@
 # Server Configuration
 NODE_ENV=development
 PORT=3001
-API_VERSION=v1
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:5173
-CORS_CREDENTIALS=true
 
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/reelverse_db
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=reelverse_db
-DB_USER=username
-DB_PASSWORD=password
-DB_SSL=false
+DATABASE_URL=postgresql://reelverse:reelverse_password@localhost:5432/reelverse_db
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
@@ -22,96 +11,31 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=24h
-JWT_REFRESH_EXPIRES_IN=7d
+# AI Services Configuration
+WEAVIATE_URL=http://localhost:8080
+MEILISEARCH_URL=http://localhost:7700
+MEILISEARCH_MASTER_KEY=development-master-key-change-in-production
 
-# Blockchain Configuration
-POLYGON_RPC_URL=https://polygon-mainnet.infura.io/v3/your-infura-key
-ETHEREUM_CHAIN_ID=137
-PLATFORM_PRIVATE_KEY=your-private-key-for-backend-operations
-PLATFORM_WALLET_ADDRESS=your-platform-wallet-address
+# AI API Keys
+OPENAI_API_KEY=your-openai-api-key-here
+HUGGINGFACE_API_KEY=your-huggingface-api-key-here
 
-# USDC Configuration
-USDC_CONTRACT_ADDRESS=0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174
-
-# Contract Addresses (Polygon Mainnet)
-CONTENT_REGISTRY_ADDRESS=0x...
-CREATOR_REGISTRY_ADDRESS=0x...
-NFT_ACCESS_ADDRESS=0x...
-REVENUE_SPLITTER_ADDRESS=0x...
-CONTENT_ACCESS_GATE_ADDRESS=0x...
-UPLOAD_MANAGER_ADDRESS=0x...
-AGE_VERIFIED_SBT_ADDRESS=0x...
-VERIFIED_TALENT_SBT_ADDRESS=0x...
+# Authentication
+JWT_SECRET=development-jwt-secret-change-in-production
+CORS_ORIGIN=http://localhost:5173
 
 # External Services
 PERSONA_API_KEY=your-persona-api-key
-PERSONA_TEMPLATE_ID=your-persona-template-id
-PERSONA_WEBHOOK_SECRET=your-persona-webhook-secret
-
-# Video Processing
 LIVEPEER_API_KEY=your-livepeer-api-key
-LIVEPEER_BASE_URL=https://livepeer.studio/api
-LIVEPEER_WEBHOOK_ID=your-livepeer-webhook-id
-LIVEPEER_WEBHOOK_SECRET=your-livepeer-webhook-secret
 
-# Fiat Payment Providers
-CCBILL_CLIENT_ACCOUNT=your-ccbill-client-account
-CCBILL_CLIENT_SUBACCOUNT=your-ccbill-client-subaccount
-CCBILL_FORM_NAME=cc_form
-CCBILL_SALT=your-ccbill-salt
-CCBILL_WEBHOOK_SECRET=your-ccbill-webhook-secret
-CCBILL_BASE_URL=https://api.ccbill.com
+# Blockchain Configuration
+POLYGON_RPC_URL=https://polygon-rpc.com
+PRIVATE_KEY=your-private-key-for-contract-deployment
 
-SEGPAY_PACKAGE_ID=your-segpay-package-id
-SEGPAY_MERCHANT_ID=your-segpay-merchant-id
-SEGPAY_API_KEY=your-segpay-api-key
-SEGPAY_WEBHOOK_SECRET=your-segpay-webhook-secret
-SEGPAY_BASE_URL=https://secure2.segpay.com
-
-# Frontend URL for payment redirects
-FRONTEND_URL=https://reelverse.com
-
-PAXUM_API_KEY=your-paxum-api-key
-PAXUM_API_SECRET=your-paxum-api-secret
-
-LIVEPEER_API_KEY=your-livepeer-api-key
-LIVEPEER_WEBHOOK_SECRET=your-livepeer-webhook-secret
-
-# Storage Configuration
-CLOUDFLARE_R2_ACCOUNT_ID=your-r2-account-id
-CLOUDFLARE_R2_ACCESS_KEY_ID=your-r2-access-key
-CLOUDFLARE_R2_SECRET_ACCESS_KEY=your-r2-secret-key
-CLOUDFLARE_R2_BUCKET_NAME=reelverse-content
-
-ARWEAVE_WALLET_PATH=./arweave-wallet.json
-IPFS_GATEWAY_URL=https://gateway.pinata.cloud/ipfs/
-
-# Encryption Configuration
-CONTENT_ENCRYPTION_KEY=your-32-byte-encryption-key-change-this
-WATERMARK_SECRET=your-watermark-secret-key
-
-# HLS Streaming Configuration
-HLS_BASE_URL=https://stream.reelverse.com
-HLS_SIGNING_KEY=your-hls-signing-key-change-this-in-production
-MAX_CONCURRENT_SESSIONS=5
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# File Storage
+UPLOAD_PATH=./uploads
+MAX_FILE_SIZE=1073741824
 
 # Logging
 LOG_LEVEL=info
-LOG_FILE=logs/app.log
-
-# Feature Flags
-ENABLE_AGE_BLUR=true
-ENABLE_CRYPTO_ONLY_MODE=false
-REQUIRE_VERIFIED_TALENT_FOR_PUBLISH=false
-ENABLE_GEOGRAPHIC_RESTRICTIONS=true
-
-# Monitoring
-SENTRY_DSN=your-sentry-dsn
-ENABLE_METRICS=true
+LOG_FILE=./logs/app.log
