--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,48 @@ services:
       timeout: 10s
       retries: 3
 
+  # Weaviate Vector Database
+  weaviate:
+    image: semitechnologies/weaviate:1.22.4
+    container_name: reelverse-weaviate
+    ports:
+      - "8080:8080"
+    environment:
+      QUERY_DEFAULTS_LIMIT: 25
+      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
+      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
+      DEFAULT_VECTORIZER_MODULE: 'none'
+      ENABLE_MODULES: 'text2vec-openai,text2vec-cohere,text2vec-huggingface,ref2vec-centroid,generative-openai,qna-openai'
+      CLUSTER_HOSTNAME: 'node1'
+    volumes:
+      - weaviate_data:/var/lib/weaviate
+    networks:
+      - reelverse-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/v1/.well-known/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Meilisearch for hybrid search
+  meilisearch:
+    image: getmeili/meilisearch:v1.5
+    container_name: reelverse-meilisearch
+    ports:
+      - "7700:7700"
+    environment:
+      MEILI_ENV: development
+      MEILI_MASTER_KEY: development-master-key-change-in-production
+    volumes:
+      - meilisearch_data:/meili_data
+    networks:
+      - reelverse-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7700/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   # API Backend
   api:
     build:
@@ -49,8 +91,13 @@ services:
       PORT: 3001
       DATABASE_URL: postgresql://reelverse:reelverse_password@postgres:5432/reelverse_db
       REDIS_URL: redis://redis:6379
+      WEAVIATE_URL: http://weaviate:8080
+      MEILISEARCH_URL: http://meilisearch:7700
+      MEILISEARCH_MASTER_KEY: development-master-key-change-in-production
       CORS_ORIGIN: http://localhost:5173
       JWT_SECRET: development-jwt-secret-change-in-production
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      HUGGINGFACE_API_KEY: ${HUGGINGFACE_API_KEY}
     ports:
       - "3001:3001"
     volumes:
@@ -63,6 +110,10 @@ services:
       postgres:
         condition: service_healthy
       redis:
+        condition: service_healthy
+      weaviate:
+        condition: service_healthy
+      meilisearch:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
@@ -96,6 +147,10 @@ volumes:
   postgres_data:
     driver: local
   redis_data:
+    driver: local
+  weaviate_data:
+    driver: local
+  meilisearch_data:
     driver: local
   api_logs:
     driver: local
