--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
+    "ioredis": "^5.3.2",
     "ethers": "^6.8.1",
     "viem": "^1.19.9",
     "siwe": "^2.1.4",
@@ -40,7 +41,9 @@
     "bull": "^4.12.2",
     "sharp": "^0.32.6",
     "fluent-ffmpeg": "^2.1.2",
-    "node-phash": "^1.0.0"
+    "node-phash": "^1.0.0",
+    "archiver": "^5.3.2",
+    "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
@@ -56,6 +59,8 @@
     "@types/jest": "^29.5.8",
     "@types/supertest": "^2.0.16",
     "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/archiver": "^5.3.4",
+    "@types/pdfkit": "^0.12.12",
     "supertest": "^6.3.3",
     "typescript": "^5.2.2",
     "nodemon": "^3.0.1",
