--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-router-dom": "6.22.3",
     "siwe": "^2.1.4",
     "tailwindcss": "^3.4.1",
+    "uuid": "^9.0.1",
     "viem": "^2.7.15",
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/uuid": "^9.0.8",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   },
