--- a/subgraph/subgraph.template.yaml
+++ b/subgraph/subgraph.template.yaml
@@ -5,11 +5,11 @@ dataSources:
   # Creator Registry Contract
   - kind: ethereum
     name: CreatorRegistry
-    network: polygon
+    network: {{network}}
     source:
-      address: "0x0000000000000000000000000000000000000000" # Replace with deployed address
+      address: "{{creatorRegistry.address}}"
       abi: CreatorRegistry
-      startBlock: 0 # Replace with deployment block
+      startBlock: {{creatorRegistry.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -32,11 +32,11 @@ dataSources:
   # Content Registry Contract
   - kind: ethereum
     name: ContentRegistry
-    network: polygon
+    network: {{network}}
     source:
-      address: "0x0000000000000000000000000000000000000000" # Replace with deployed address
+      address: "{{contentRegistry.address}}"
       abi: ContentRegistry
-      startBlock: 0 # Replace with deployment block
+      startBlock: {{contentRegistry.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -62,11 +62,11 @@ dataSources:
   # NFT Access Contract (Entitlements)
   - kind: ethereum
     name: NFTAccess
-    network: polygon
+    network: {{network}}
     source:
-      address: "0x0000000000000000000000000000000000000000" # Replace with deployed address
+      address: "{{nftAccess.address}}"
       abi: NFTAccess
-      startBlock: 0 # Replace with deployment block
+      startBlock: {{nftAccess.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -90,11 +90,11 @@ dataSources:
   # Revenue Splitter Contract
   - kind: ethereum
     name: RevenueSplitter
-    network: polygon
+    network: {{network}}
     source:
-      address: "0x0000000000000000000000000000000000000000" # Replace with deployed address
+      address: "{{revenueSplitter.address}}"
       abi: RevenueSplitter
-      startBlock: 0 # Replace with deployment block
+      startBlock: {{revenueSplitter.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -118,11 +118,11 @@ dataSources:
   # Organization Registry Contract
   - kind: ethereum
     name: OrganizationRegistry
-    network: polygon
+    network: {{network}}
     source:
-      address: "0x0000000000000000000000000000000000000000" # Replace with deployed address
+      address: "{{organizationRegistry.address}}"
       abi: OrganizationRegistry
-      startBlock: 0 # Replace with deployment block
+      startBlock: {{organizationRegistry.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -146,11 +146,11 @@ dataSources:
   # Age Verification SBT Contract
   - kind: ethereum
     name: AgeVerifiedSBT
-    network: polygon
+    network: {{network}}
     source:
-      address: "0x0000000000000000000000000000000000000000" # Replace with deployed address
+      address: "{{ageVerifiedSBT.address}}"
       abi: AgeVerifiedSBT
-      startBlock: 0 # Replace with deployment block
+      startBlock: {{ageVerifiedSBT.startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -170,7 +170,7 @@ templates:
   # Template for dynamically created revenue splitters
   - kind: ethereum/contract
     name: RevenueSplitterTemplate
-    network: polygon
+    network: {{network}}
     source:
       abi: RevenueSplitter
     mapping:
