--- a/package.json
+++ b/package.json
@@ -6,7 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:install": "playwright install",
+    "test:load": "node tests/load/run-load-tests.js",
+    "test:load:users": "node tests/load/run-load-tests.js --single users",
+    "test:load:payments": "node tests/load/run-load-tests.js --single payments",
+    "test:load:streaming": "node tests/load/run-load-tests.js --single streaming",
+    "test:load:database": "node tests/load/run-load-tests.js --single database",
+    "test:security": "node tests/security/run-security-audit.js",
+    "test:security:slither": "node tests/security/run-security-audit.js --slither",
+    "test:security:echidna": "node tests/security/run-security-audit.js --echidna",
+    "test:pentest": "node tests/pentest/run-pentest.js",
+    "test:pentest:quick": "node tests/pentest/run-pentest.js --quick",
+    "emergency:rollback": "bash scripts/emergency/emergency-rollback.sh",
+    "emergency:kill-switches": "bash scripts/emergency/kill-switches.sh"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.1",
@@ -34,6 +51,7 @@
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@types/node": "^22.14.0",
     "@types/uuid": "^9.0.8",
     "typescript": "~5.8.2",
