--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "test:pentest:quick": "node tests/pentest/run-pentest.js --quick",
     "emergency:rollback": "bash scripts/emergency/emergency-rollback.sh",
     "emergency:kill-switches": "bash scripts/emergency/kill-switches.sh"
+  ,"test:integration:up":"docker-compose -f docker-compose.test.yml up -d --remove-orphans",
+  "test:integration:down":"docker-compose -f docker-compose.test.yml down --volumes",
+  "test:integration:smoke":"node scripts/smoke_integration_test.js"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.1",
@@ -52,10 +55,18 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
-    "@types/node": "^22.14.0",
-    "@types/uuid": "^9.0.8",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+  "@types/node": "^22.14.0",
+  "@types/express": "^4.17.21",
+  "@types/pg": "^8.6.6",
+  "@types/redis": "^2.8.32",
+  "@types/winston": "^2.4.4",
+  "@types/uuid": "^9.0.8",
+  "zod": "^3.23.2",
+  "dotenv": "^16.3.1",
+  "cross-env": "^7.0.3",
+  "ts-node": "^10.9.1",
+  "typescript": "~5.8.2",
+  "vite": "^6.2.0"
   },
   "description": "This contains everything you need to run your app locally.",
   "main": "index.js",
