--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,11 @@
   "description": "Reelverse18 Backend API Services",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+  "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+  "start": "node dist/index.js",
+  "sweep:idempotency": "ts-node src/scripts/sweepIdempotency.ts",
+  "relayer:integration-smoke": "ts-node src/scripts/relayerIntegrationSmoke.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
@@ -35,15 +37,14 @@
     "joi": "^17.11.0",
     "uuid": "^9.0.1",
     "weaviate-ts-client": "^1.5.0",
-    "meilisearch": "^0.37.0",
-    "openai": "^4.20.1",
-    "@huggingface/inference": "^2.6.4",
-    "bull": "^4.12.2",
-    "sharp": "^0.32.6",
-    "fluent-ffmpeg": "^2.1.2",
-    "node-phash": "^1.0.0",
-    "archiver": "^5.3.2",
-    "pdfkit": "^0.13.0"
+  "meilisearch": "^0.37.0",
+  "openai": "^4.20.1",
+  "@huggingface/inference": "^2.6.4",
+  "bull": "^4.12.2",
+  "sharp": "^0.32.6",
+  "fluent-ffmpeg": "^2.1.2",
+  "archiver": "^5.3.2",
+  "pdfkit": "^0.13.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
