--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "test:pentest": "node tests/pentest/run-pentest.js",
     "test:pentest:quick": "node tests/pentest/run-pentest.js --quick",
     "emergency:rollback": "bash scripts/emergency/emergency-rollback.sh",
-    "emergency:kill-switches": "bash scripts/emergency/kill-switches.sh"
-  ,"test:integration:up":"docker-compose -f docker-compose.test.yml up -d --remove-orphans",
-  "test:integration:down":"docker-compose -f docker-compose.test.yml down --volumes",
-  "test:integration:smoke":"node scripts/smoke_integration_test.js"
+    "emergency:kill-switches": "bash scripts/emergency/kill-switches.sh",
+    "test:integration:up": "docker-compose -f docker-compose.test.yml up -d --remove-orphans",
+    "test:integration:down": "docker-compose -f docker-compose.test.yml down --volumes",
+    "test:integration:smoke": "node scripts/smoke_integration_test.js"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.1",
@@ -44,6 +44,7 @@
     "clsx": "^2.1.0",
     "ethers": "^6.8.1",
     "path": "^0.12.7",
+    "prom-client": "^14.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "6.22.3",
@@ -52,22 +53,21 @@
     "uuid": "^9.0.1",
     "viem": "^2.7.15",
     "wagmi": "^2.5.7"
-  ,"prom-client": "^14.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
-  "@types/node": "^22.14.0",
-  "@types/express": "^4.17.21",
-  "@types/pg": "^8.6.6",
-  "@types/redis": "^2.8.32",
-  "@types/winston": "^2.4.4",
-  "@types/uuid": "^9.0.8",
-  "zod": "^3.23.2",
-  "dotenv": "^16.3.1",
-  "cross-env": "^7.0.3",
-  "ts-node": "^10.9.1",
-  "typescript": "~5.8.2",
-  "vite": "^6.2.0"
+    "@types/express": "^4.17.23",
+    "@types/node": "^22.17.2",
+    "@types/pg": "^8.15.5",
+    "@types/redis": "^2.8.32",
+    "@types/uuid": "^9.0.8",
+    "@types/winston": "^2.4.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0",
+    "zod": "^3.23.2"
   },
   "description": "This contains everything you need to run your app locally.",
   "main": "index.js",
