--- a/api/package.json
+++ b/api/package.json
@@ -4,73 +4,76 @@
   "description": "Reelverse18 Backend API Services",
   "main": "src/index.ts",
   "scripts": {
-  "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
-  "start": "node dist/index.js",
-  "sweep:idempotency": "ts-node src/scripts/sweepIdempotency.ts",
-  "relayer:integration-smoke": "ts-node src/scripts/relayerIntegrationSmoke.ts",
+    "start": "node dist/index.js",
+    "sweep:idempotency": "ts-node src/scripts/sweepIdempotency.ts",
+    "relayer:integration-smoke": "ts-node src/scripts/relayerIntegrationSmoke.ts",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:api": "vitest run -r src/tests",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
+    "@account-abstraction/contracts": "^0.6.0",
+    "@huggingface/inference": "^2.6.4",
+    "archiver": "^5.3.2",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "bull": "^4.12.2",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.8.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
-    "dotenv": "^16.3.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "meilisearch": "^0.37.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.20.1",
+    "pdfkit": "^0.13.0",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
-    "ioredis": "^5.3.2",
-    "ethers": "^6.8.1",
-    "viem": "^1.19.9",
+    "sharp": "^0.32.6",
     "siwe": "^2.1.4",
-    "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "multer": "^1.4.5-lts.1",
-    "axios": "^1.6.2",
-    "winston": "^3.11.0",
-    "joi": "^17.11.0",
     "uuid": "^9.0.1",
+    "viem": "^2.34.0",
     "weaviate-ts-client": "^1.5.0",
-  "meilisearch": "^0.37.0",
-  "openai": "^4.20.1",
-  "@huggingface/inference": "^2.6.4",
-  "bull": "^4.12.2",
-  "sharp": "^0.32.6",
-  "fluent-ffmpeg": "^2.1.2",
-  "archiver": "^5.3.2",
-  "pdfkit": "^0.13.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/compression": "^1.7.5",
-    "@types/pg": "^8.10.7",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcrypt": "^5.0.2",
-    "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
-    "@types/jest": "^29.5.8",
-    "@types/supertest": "^2.0.16",
-    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/archiver": "^5.3.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.9.0",
     "@types/pdfkit": "^0.12.12",
-    "supertest": "^6.3.3",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "@types/pg": "^8.10.7",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0"
+    "eslint": "^8.54.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "reelverse",
