--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "emergency:kill-switches": "bash scripts/emergency/kill-switches.sh",
     "test:integration:up": "docker-compose -f docker-compose.test.yml up -d --remove-orphans",
     "test:integration:down": "docker-compose -f docker-compose.test.yml down --volumes",
-    "test:integration:smoke": "node scripts/smoke_integration_test.js"
+    "test:integration:smoke": "node scripts/smoke_integration_test.js",
+    "aa:health": "ts-node scripts/aa/health.ts",
+    "test:api": "vitest run -r api/src/tests"
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.1",
@@ -52,7 +54,8 @@
     "tailwindcss": "^3.4.1",
     "uuid": "^9.0.1",
     "viem": "^2.7.15",
-    "wagmi": "^2.5.7"
+    "wagmi": "^2.5.7",
+    "@account-abstraction/sdk": "^0.6.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
