--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@biconomy/account": "^4.0.0",
     "@biconomy/modules": "^4.0.0",
     "@huggingface/inference": "^2.6.4",
+    "@privy-io/server-auth": "*",
     "archiver": "^5.3.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -33,7 +34,6 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.8.1",
     "express": "^4.18.2",
-    "@privy-io/server-auth": "^1.60.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "fluent-ffmpeg": "^2.1.2",
@@ -63,7 +63,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/jest": "^29.5.8",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
@@ -81,8 +81,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "vitest": "^3.2.4",
-    "@types/zod": "^3.22.4"
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "reelverse",
