--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_AGE_GATE_MIN_AGE=18
 VITE_AGE_GATE_REMEMBER_DAYS=30
 VITE_PRIVY_APP_ID=YOUR_PRIVY_APP_ID # Replace with your actual Privy App ID
 VITE_API_BASE_URL=http://localhost:3001/api/v1 # Example API base URL
+VITE_SHOW_WALLET_UI=false # New flag for hiding wallet UI
