--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:api": "vitest run -r api/src/tests"
   },
   "dependencies": {
+    "@account-abstraction/sdk": "^0.6.0",
     "@coinbase/wallet-sdk": "^3.7.1",
     "@google/genai": "^1.13.0",
     "@headlessui/react": "^1.7.18",
@@ -55,12 +56,14 @@
     "tailwindcss": "^3.4.1",
     "uuid": "^9.0.1",
     "viem": "^2.7.15",
-    "wagmi": "^2.5.7",
-    "@account-abstraction/sdk": "^0.6.0"
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
     "@types/express": "^4.17.23",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.17.2",
     "@types/pg": "^8.15.5",
     "@types/redis": "^2.8.32",
