--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.3.7",
+    "@uppy/core": "^5.0.0",
+    "@uppy/dashboard": "^5.0.0",
+    "@uppy/tus": "^5.0.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "ethers": "^6.15.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "siwe": "^3.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
