fixing upload completed

--- a/api/.env.example
+++ b/api/.env.example
@@ -139,3 +139,19 @@ RATE_LIMIT_SUBMIT=30/min
 RATE_LIMIT_UPLOAD_START=5/min
 RATE_LIMIT_AA_SESSION=10/hour
 RATE_LIMIT_BILLING=20/min
+
+# Resumable Uploads Configuration
+STORAGE_BUCKET_UPLOADS=reelverse-uploads
+STORAGE_REGION=us-east-1
+STORAGE_ENDPOINT=
+STORAGE_ACCESS_KEY_ID=your-access-key-id
+STORAGE_SECRET_ACCESS_KEY=your-secret-access-key
+CDN_BASE_URL=https://cdn.reelverse.com
+NFT_STORAGE_TOKEN=your-nft-storage-token
+DEFAULT_CHUNK_SIZE_BYTES=8388608
+MAX_FILE_SIZE_BYTES=21474836480
+UPLOAD_SESSION_TTL_HOURS=24
+UPLOAD_SWEEPER_INTERVAL_MINUTES=60
+UPLOAD_VERIFY_IPFS_HASH=false
+RATE_LIMIT_UPLOAD_SESSION=10/hour
+RATE_LIMIT_UPLOAD_CHUNK=100/min
