--- a/api/package.json
+++ b/api/package.json
@@ -21,10 +21,13 @@
   },
   "dependencies": {
     "@account-abstraction/contracts": "^0.6.0",
+    "@aws-sdk/client-s3": "^3.873.0",
+    "@aws-sdk/lib-storage": "^3.873.0",
     "@biconomy/account": "^4.0.0",
     "@biconomy/modules": "^4.0.0",
     "@huggingface/inference": "^2.6.4",
     "@privy-io/server-auth": "*",
+    "@types/node-cron": "^3.0.11",
     "archiver": "^5.3.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -44,6 +47,8 @@
     "meilisearch": "^0.37.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nft.storage": "^7.2.0",
+    "node-cron": "^4.2.1",
     "openai": "^4.20.1",
     "pdfkit": "^0.13.0",
     "pg": "^8.11.3",
